--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -11,6 +11,8 @@
     <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
     <script src="../static/lib/bootstrap4.2.1/js/bootstrap.min.js"></script>
     <script src="../static/lib/js_function/js_function.js" type="text/javascript"></script>
+    <script src="../static/js/lib/jquery.twbsPagination.js"></script>
+    <script src="../static/js/lib/jquery.twbsPagination.min.js"></script>
 
     {% block head %}
     {% endblock %}
