--- a/FlaskServer/templates/manufacture.html
+++ b/FlaskServer/templates/manufacture.html
@@ -1,210 +1,8 @@
 {% extends 'main_base.html' %}
 {% block head %}
-<script src="../static/js/lib/jquery.twbsPagination.js"></script>
-<script src="../static/js/lib/jquery.twbsPagination.min.js"></script>
 <script>
-    function add_and_delete_row_btn() {
-        $('#btn-add-row').click(function () {
-            var time = new Date().toLocaleTimeString();
-            //$('#insert_table > tbody:last').append('<tr><td>{{ a }}</td><td>' + time + '</td></tr>');
-            insert_manufacture_table();
-        });
-        $('#btn-delete-row').click(function () {
-            var trCount = $('#insert_table > tbody > tr').size();     // 행삭제 body row count
-            if(trCount == 1){
-                  alert('더이상 삭제할 수 없습니다.');
-                  return;
-            }
-            else
-                $('#insert_table > tbody:last > tr:last').remove();
-        });
-    }
-
-    function make_main_specific_table(list) {
-        console.log("Get Specific List : \n" + list);
-        console.log("len : " + list.length);
-        console.log("Type : " + typeof (list));
-
-        if (list == undefined) {
-            console.log('Main Table length is empty');
-        } else if (list == 0) {
-            alert("필터를 적용할 대상이 없습니다.");
-            return false;
-        } else {
-            if (typeof (list) == "string")
-                list = JSON_parse_convertor(list);
-            $('#test_table > tbody:last').empty();
-            for (var i = 0; i < list.length; i++) {
-                $('#test_table').append(
-                    $('<tr>').append(
-                        //$('<td><input type="checkbox" name="main_checkbox"/>').append(model_row[i]['model']),
-                        $('<td><input type="checkbox" name="main_checkbox" placeholder="끼욧"/>').append(list[i]['_id']),
-                        $('<td>').append(list[i]['week']),
-                        $('<td>').append(list[i]['model']),
-                        $('<td>').append(list[i]['number']),
-                        $('<td>').append(list[i]['date'])
-                    )
-                );
-            }
-        }
-    }
-
-    function make_main_manufacture_table(list) {
-        console.log("Get Main List : \n" + list);
-        console.log("len : " + list.length);
-
-        var json_table = JSON_parse_convertor(list);
-        var model_list = Array();
-        console.log(json_table);
-        for (var i = 0; i < json_table.length; i++) {
-            model_list.push(json_table[i]['model']);
-        }
-        console.log("Model list : " + model_list);
-        console.log("Type : " + typeof (model_list));
-
-        var return_list = [];
-        $.ajax({
-            url: "/getProductData",
-            data: {
-                'model_list': JSON.stringify(model_list),
-                'table_list': JSON.stringify(json_table)
-            },
-            type: "GET",
-            dataType: "json"
-        })
-            .done(function (json) {
-                console.log("DONE");
-                console.log(json);
-                // Just only Dic Type
-                /*
-                for (key in json) {
-                    console.log(key + ' ' + json.value);
-                }
-                $.each(json, function (key, value) {
-                    console.log(key + ' ' + value);
-                    //return_dic[key] = value;
-                });*/
-
-                if (json == undefined) {
-                    console.log('Main Table length is empty');
-                } else if (json == 0) {
-                    alert("필터를 적용할 대상이 없습니다.");
-                    return false;
-                } else {
-                    if (typeof (json) == "string")
-                        json = JSON_parse_convertor(json);
-                    $('#main_table > tbody:last').empty();
-                    for (var i = 0; i < json.length; i++) {
-                        $('#main_table').append(
-                            $('<tr>').append(
-                                //$('<td><input type="checkbox" name="main_checkbox"/>').append(model_row[i]['model']),
-                                $('<td><input type="checkbox" name="main_checkbox" placeholder="끼욧"/>').append(json[i]['model']),
-                                $('<td>').append(json[i]['number']),
-                                $('<td>').append(json[i]['number'] - json[i][json[i]['model']]),
-                                $('<td>').append(json[i][json[i]['model']]),
-                                $('<td><button type="button" id="detail_btn" name="detail_btn" value="" class="detail_btn_class btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히</button>')
-                            )
-                        );
-                        document.getElementsByName("detail_btn")[i].value = list[i]['product_info_id'];
-                    }
-                }
-            })
-            .fail(function (xhr, status, errorThrown) {
-                $("#test").html("오류발생<br>")
-                    .append("오류명 : " + errorThrown + "<br>")
-                    .append("상태 : " + status);
-            })
-            .always(function (xhr, status) {
-                $("#text").html("요청 완료");
-            });
-
-
-    }
-
-    function main_manufacture_table() {
-        var rows = $('#main_rows').val();
-        var specific_row = $('#specific_list').val();
-        if (specific_row != undefined && specific_row != 'None') {
-            console.log(" 바꿔야행 ");
-            make_main_specific_table(rows);
-        } else if (rows == undefined) {
-            console.log('Main Table length is empty');
-        } else {
-            make_main_manufacture_table(rows);
-            make_main_specific_table(rows);
-        }
-    }
-
-    function insert_manufacture_table() {
-        $('#insert_table').append(
-            $('<tr>').append(
-                $('<td><select class="form-control" id="insert_model" name="model">' +
-                    '<option>Indy3</option>\n' +
-                    '<option>Indy5</option>\n' +
-                    '<option>Indy7</option>\n' +
-                    '<option>Opti</option>\n' +
-                    '<option>Step-pc2</option>\n' +
-                    '<option>Core</option>\n' +
-                    '<option>Conty</option>\n' +
-                    '</select>'),
-                $('<td><input type="text" class="form-control" id="insert_number" name="number">')
-            )
-        );
-    }
-
-    function pagination_test() {
-        var rows = $('#main_rows').val();
-        rows = JSON_parse_convertor(rows);
-        rows = rows.length;
-        //var rows = $('#main_rows').find('tr').index();
-        console.log("size : " +  rows);
-        $('#pagination').twbsPagination({
-            /*
-            totalPages: totalPages,  // 전체 page블럭 수
-            visiblePages: visibleBlock,  // 출력될 page 블럭수 상수로 지정해 줘도 되고, 변수로 지정해줘도 된다.
-            */
-            totalPages: 35,
-            visiblePages: 5,
-            prev: "이전",
-            next: "다음",
-            first: '<span aria-hidden="true">«</span>',
-            last: '<span aria-hidden="true">»</span>',
-            onPageClick: function (event, page) {
-                $('#page-content').text('페이지 ' + page);
-                //paging(page);
-            }
-        });
-
-        // Class를 이용한 여러개 콘텐츠에 동기화하기
-        $('.sync-pagination').twbsPagination({
-            totalPages: 20,
-            onPageClick: function (evt, page) {
-                $('#content').text('Page ' + page);
-            }
-        });
-    }
-
-    function paging(page) {
-        $('#page_test').empty();
-        var startRow = (page - 1) * pageSize; // + 1 list는 0부터 시작하니깐;
-        var endRow = page * pageSize;
-        if (endRow > totalCount) {
-            endRow = totalCount;
-        }
-        var startPage = ((page - 1) / visibleBlock) * visibleBlock + 1;
-        var endPage = startPage + visibleBlock - 1;
-        if (endPage > totalPages) {    //
-            endPage = totalPages;
-        }
-        for (var j = startRow; j < endRow; j++) {
-            $('#list-body').append('' + chatLogList[j].fileNo + '<a onclick="getContent(\'' + chatLogList[j].fileName + '\')">'
-                + textLengthOverCut(chatLogList[j].fileName, '25', '...') + '</a>' + chatLogList[j].fileDate + '');
-        }
-    }
-
     $(document).ready(function () {
         insert_manufacture_table();
-        main_manufacture_table();
         pagination_test();
         add_and_delete_row_btn();
     });
@@ -214,33 +12,6 @@
 {% block body_title %}Title{% endblock %}
 {% block main_title %}생산 화면{% endblock %}
 {% block body %}
-<div class="row container-fluid">
-    <table class="table table-bordered table-striped" id="page_test">
-        <thead class="thead-light">
-        <tr>
-            <th>모델</th>
-            <th>생산수량</th>
-            <th>Aging</th>
-            <th>완료</th>
-            <th>버튼</th>
-        </tr>
-        </thead>
-        <tbody>
-        <!--  Call of the Java Script Function (table) -->
-        </tbody>
-    </table>
-</div>
-<div class="text-center center-block">
-    <div id="content">page 1</div>
-    <ul class="sync-pagination pagination-sm" style="justify-content: center;"></ul>
-</div>
-<div class="text-center">
-    <div id="page-content">페이지 1</div>
-    <nav aria-label="Page navigation">
-        <ul class="pagination" id="pagination" style="justify-content: center;"></ul>
-    </nav>
-</div>
-<hr/>
 <input hidden id="main_rows" value="{{ object.manufacture_list() }}"/>
 <input hidden id="specific_list" value="{{ specific_list }}"/>
 <form class="form-inline" action="/" method="POST">
@@ -255,6 +26,7 @@
     <table class="table table-bordered table-striped" id="main_table">
         <thead class="thead-light">
         <tr>
+            <th>번호</th>
             <th>모델</th>
             <th>생산수량</th>
             <th>Aging</th>
@@ -266,6 +38,12 @@
         <!--  Call of the Java Script Function (table) -->
         </tbody>
     </table>
+</div>
+<div class="text-center center-block">
+    <div id="page_content">페이지 1</div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination" id="pagination" style="justify-content: center;"></ul>
+    </nav>
 </div>
 <!-- Test Table -->
 <hr/>
