--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -105,6 +105,12 @@
                     </a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="/sales_main">
+                        "영업관리 화면"
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="/shipment_main">
                         "Test 화면"
                     </a>
