--- a/FlaskServer/templates/sales_main.html
+++ b/FlaskServer/templates/sales_main.html
@@ -1,21 +1,66 @@
 {% extends 'main_base.html' %}
 {% block head %}
 <script>
+    function register_of_pn(){
+        $('#insert_pn_table').append(
+          $('<tr>').append(
+              $('<td><input type="text" class="form-control" name="pn_field">'),
+              $('<td><input type="text" class="form-control" name="project_name_filed">')
+          )
+        );
+    }
+
+    function register_of_partner(){
+        $('#insert_partner_table').append(
+          $('<tr>').append(
+              $('<td><input type="text" class="form-control" name="a_field">'),
+              $('<td><input type="text" class="form-control" name="partner_name_field">'),
+              $('<td><input type="text" class="form-control" name="b_field">'),
+              $('<td><input type="text" class="form-control" name="address_field">'),
+              $('<td><input type="text" class="form-control" name="header_field">'),
+              $('<td><input type="text" class="form-control" name="phone_field">'),
+              $('<td><input type="text" class="form-control" name="email_field">'),
+              $('<td><input type="text" class="form-control" name="var_filed">')
+          )
+        );
+    }
+    function register_of_order(){
+        $('#obtain_order_table').append(
+          $('<tr>').append(
+              $('<td colspan="2"><input type="text" class="form-control" name="product_field">'),
+              $('<td><input type="text" class="form-control" name="number_of_field">'),
+              $('<td><input type="text" class="form-control" name="day_limit_filed">')
+          )
+        );
+    }
+
     $(document).ready(function () {
     pagination_test();
+    register_of_partner();
+    register_of_order();
+    register_of_pn();
     });
 </script>
 {% endblock %}
 {% block title %} 영업 페이지 {% endblock %}
 {% block body_title %}Title{% endblock %}
-{% block main_title %}엽업 화면{% endblock %}
+{% block main_title %}영업 화면{% endblock %}
 {% block body %}
 <input hidden id="main_rows" value="{{ object.manufacture_list() }}"/>
 <input hidden id="specific_list" value="{{ specific_list }}"/>
 <form class="form-inline" action="/" method="POST">
     <div class="row container-fluid">
-        <button type="button" class="btn btn-warning col-1 offset-9" data-toggle="modal" data-target="#insert_modal">
-            등록
+        <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_pn">
+            P/N 등록
+        </button>
+        <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_partner">
+            협력업체
+        </button>
+        <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#obtain_order">
+            수주
+        </button>
+        <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal">
+            납품
         </button>
     </div>
 </form>
@@ -24,12 +69,9 @@
     <table class="table table-bordered table-striped" id="main_table">
         <thead class="thead-light">
         <tr>
-            <th>번호</th>
-            <th>모델</th>
-            <th>생산수량</th>
-            <th>Aging</th>
-            <th>완료</th>
-            <th>버튼</th>
+            <th>Project Number</th>
+            <th>업체명</th>
+            <th>수주내용</th>
         </tr>
         </thead>
         <tbody>
@@ -38,10 +80,128 @@
     </table>
 </div>
 <div class="text-center center-block">
-    <div id="page_content">페이지 1</div>
+    <div id="page_content"></div>
     <nav aria-label="Page navigation">
         <ul class="pagination" id="pagination" style="justify-content: center;"></ul>
     </nav>
+</div>
+<!-- The Product Insert Modal -->
+<div class="modal fade" id="obtain_order">
+    <div class="modal-dialog modal-lg">
+        <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header text-white bg-secondary">
+                    <h1 class="page-header">수 주</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered" id="obtain_order_table">
+                            <thead class="thead-light">
+                            <tr>
+                                <th>업체명</th>
+                                <th><input type="text" class="form-control" id="partner" name="week"></th>
+                                <th>Project Number</th>
+                                <th><input type="text" class="form-control" id="pn_number" name="week"></th>
+                            </tr>
+                            <tr>
+                                <th colspan="4">수주 내용</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2">제품</th>
+                                <th>수량</th>
+                                <th>납기</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" id="submit_order" class="btn btn-warning">등 록
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- The Product Insert Modal -->
+<div class="modal fade" id="insert_pn">
+    <div class="modal-dialog modal-lg">
+        <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header text-white bg-secondary">
+                    <h1 class="page-header">P/N 등록</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered" id="insert_pn_table">
+                            <thead class="thead-light">
+                            <tr>
+                                <th>Project Number</th>
+                                <th>프로젝트 이름</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" id="submit_pn" class="btn btn-warning">등 록
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- The Product Insert Modal -->
+<div class="modal fade" id="insert_partner">
+    <div class="modal-dialog modal-lg">
+        <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header text-white bg-secondary">
+                    <h1 class="page-header">협력업체 등록</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered" id="insert_partner_table">
+                            <thead class="thead-light">
+                            <tr>
+                                <th>구분</th>
+                                <th>업체명</th>
+                                <th>품명</th>
+                                <th>주소</th>
+                                <th>담당자</th>
+                                <th>연락처</th>
+                                <th>E-mail</th>
+                                <th>비고</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" id="submit_partner" class="btn btn-warning">등 록
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 <!-- The Product Insert Modal -->
 <div class="modal fade" id="insert_modal">
@@ -50,7 +210,7 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header text-white bg-secondary">
-                    <h1 class="page-header">등 록</h1>
+                    <h1 class="page-header">납 품</h1>
                 </div>
                 <!-- Modal Body -->
                 <div class="modal-body">
@@ -58,13 +218,10 @@
                         <table class="table table-striped table-bordered" id="insert_table">
                             <thead class="thead-light">
                             <tr>
-                                <th>주차</th>
-                                <th><input type="text" class="form-control" id="insert_week" name="week"></th>
-                            </tr>
-                            <tr>
                                 <th>모델명</th>
-                                <th>신규 생산 수량
-                                </th>
+                                <th>시리얼 넘버</th>
+                                <th>위치</th>
+                                <th>사유</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -77,7 +234,7 @@
                 <div class="modal-footer">
                     <button type="button" id='btn-add-row' class="btn offset-4 btn-secondary">행 추가하기</button>
                     <button type="button" id='btn-delete-row' class="btn btn-secondary">행 삭제하기</button>
-                    <button type="submit" id="insert_submit_btn" class="btn btn-warning">확 인
+                    <button type="submit" id="insert_submit_btn" class="btn btn-warning">납 품
                     </button>
                 </div>
             </div>
