--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -111,6 +111,12 @@
                     </a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="/statistics_main ">
+                        "통계 화면"
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="/shipment_main">
                         "Test 화면"
                     </a>
