--- a/FlaskServer/templates/manufacture.html
+++ b/FlaskServer/templates/manufacture.html
@@ -27,6 +27,7 @@
         <thead class="thead-light">
         <tr>
             <th>번호</th>
+            <th>주차</th>
             <th>모델</th>
             <th>생산수량</th>
             <th>Aging</th>
@@ -40,7 +41,7 @@
     </table>
 </div>
 <div class="text-center center-block">
-    <div id="page_content">페이지 1</div>
+    <div id="page_content"></div>
     <nav aria-label="Page navigation">
         <ul class="pagination" id="pagination" style="justify-content: center;"></ul>
     </nav>
