--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -12,6 +12,7 @@
         location_filter();
         state_filter();
         main_table_info();
+        //pagination_test();
         //detect_model_filter();
         //detect_location_filter();
         //detect_state_filter();
@@ -130,6 +131,12 @@
 {% else %}
 <h3> No Notice in the Database</h3>
 {% endif %}
+</div>
+<div class="text-center center-block">
+    <div id="page_content"></div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination" id="pagination" style="justify-content: center;"></ul>
+    </nav>
 </div>
 <hr>
 <div class="col-lg-12" id="ex3_Result1"></div>
