--- a/FlaskServer/templates/sales_main.html
+++ b/FlaskServer/templates/sales_main.html
@@ -1,44 +1,154 @@
 {% extends 'main_base.html' %}
 {% block head %}
 <script>
-    function register_of_pn(){
+    function register_of_pn() {
         $('#insert_pn_table').append(
-          $('<tr>').append(
-              $('<td><input type="text" class="form-control" name="pn_field">'),
-              $('<td><input type="text" class="form-control" name="project_name_filed">')
-          )
+            $('<tr>').append(
+                $('<td><input type="text" class="form-control" name="pn_field">'),
+                $('<td><input type="text" class="form-control" name="project_name_field">')
+            )
         );
     }
 
-    function register_of_partner(){
+    function register_of_partner() {
         $('#insert_partner_table').append(
-          $('<tr>').append(
-              $('<td><input type="text" class="form-control" name="a_field">'),
-              $('<td><input type="text" class="form-control" name="partner_name_field">'),
-              $('<td><input type="text" class="form-control" name="b_field">'),
-              $('<td><input type="text" class="form-control" name="address_field">'),
-              $('<td><input type="text" class="form-control" name="header_field">'),
-              $('<td><input type="text" class="form-control" name="phone_field">'),
-              $('<td><input type="text" class="form-control" name="email_field">'),
-              $('<td><input type="text" class="form-control" name="var_filed">')
-          )
+            $('<tr>').append(
+                $('<th>구분</th>'),
+                $('<th>업체명</th>'),
+                $('<th>품명</th>'),
+                $('<th>주소</th>')
+            ),
+            $('<tr>').append(
+                $('<td><input type="text" class="form-control" name="a_field">'),
+                $('<td><input type="text" class="form-control" name="partner_name_field">'),
+                $('<td><input type="text" class="form-control" name="b_field">'),
+                $('<td><input type="text" class="form-control" name="address_field">')
+            ),
+            $('<tr>').append(
+                $('<th>담당자</th>'),
+                $('<th>연락처</th>'),
+                $('<th>E-mail</th>'),
+                $('<th>비고</th>')
+            ),
+            $('<tr>').append(
+                $('<td><input type="text" class="form-control" name="header_field">'),
+                $('<td><input type="text" class="form-control" name="phone_field">'),
+                $('<td><input type="text" class="form-control" name="email_field">'),
+                $('<td><input type="text" class="form-control" name="var_field">')
+            )
         );
     }
-    function register_of_order(){
+
+    function register_of_order() {
         $('#obtain_order_table').append(
-          $('<tr>').append(
-              $('<td colspan="2"><input type="text" class="form-control" name="product_field">'),
-              $('<td><input type="text" class="form-control" name="number_of_field">'),
-              $('<td><input type="text" class="form-control" name="day_limit_filed">')
-          )
+            $('<tr>').append(
+                $('<td colspan="2"><input type="text" class="form-control" name="product_field">'),
+                $('<td><input type="text" class="form-control" name="number_of_field">'),
+                $('<td><input type="text" class="form-control" name="day_limit_filed">')
+            )
         );
+    }
+
+    function main_sales_table(rows, specific_rows, startRow, endRow) {
+        if (specific_rows != undefined && specific_rows != 'None') {
+            console.log(" 바꿔야행 ");
+            //make_main_specific_table(rows);
+        } else if (rows == undefined) {
+            console.log('Main Table length is empty');
+        } else {
+            make_sales_table(rows, startRow, endRow);
+            //make_main_specific_table(rows); // Test
+        }
+    }
+
+    function make_sales_table(rows, startRow, endRow) {
+        if (rows == undefined) {
+            console.log('Main Table length is empty');
+        } else if (rows == 0) {
+            alert("필터를 적용할 대상이 없습니다.");
+            return false;
+        } else {
+            if (typeof (rows) == "string")
+                rows = JSON_parse_convertor(rows);
+            $('#sales_table > tbody:last').empty();
+            for (var i = startRow; i < endRow; i++) {
+                $('#sales_table').append(
+                    $('<tr>').append(
+                        //$('<td><input type="checkbox" name="main_checkbox"/>').append(model_row[i]['model']),
+                        $('<td>').append(rows[i]['pn_number']),
+                        $('<td>').append(rows[i]['pn_name']),
+                        $('<td>')
+                        //$('<td>').append(rows[i]['model'])
+                    )
+                );
+            }
+        }
+    }
+
+    function getNoneTable(tableId){
+        tableId = "'#" + tableId + "'";
+        console.log("None Table Id : " + tableId);
+        $(tableId.toString()).append(
+            $('<tr>').append(
+                $('<td colspan="3"><h1>Table Is Empty</h1></td>')
+            )
+        );
+    }
+
+    function pagination_test() {
+        var specific_row = $('#specific_list').val();
+        var rows = $('#main_rows').val();
+        console.log("Main Rows List : " + rows);
+        console.log("Total Rows Size : " + rows_length);
+        if (rows == undefined || rows == 'None') {
+            console.log('Main Table length is empty');
+            getNoneTable('main_rows');
+            return false;
+        } else if (rows == 0) {
+            alert("필터를 적용할 대상이 없습니다.");
+            return false;
+        }
+        if (typeof (rows) == 'string')
+            rows = JSON_parse_convertor(rows);
+        var rows_length = rows.length;
+        console.log("Main Rows List : " + rows);
+        console.log("Total Rows Size : " + rows_length);
+        var number_of_visual_row = 5;
+        var totalPages = rows_length / number_of_visual_row;
+        if (rows_length % number_of_visual_row > 0) {
+            totalPages++;
+        }
+        $('#pagination').twbsPagination({
+            totalPages: totalPages, // 전체 page블럭 수
+            visiblePages: number_of_visual_row,  // 출력될 page 블럭수 상수로 지정해 줘도 되고, 변수로 지정해줘도 된다.
+            prev: "이전",
+            next: "다음",
+            first: '<span aria-hidden="true">«</span>',
+            last: '<span aria-hidden="true">»</span>',
+            onPageClick: function (event, page) {
+                //$('#page_content').text('페이지 ' + page);
+                paging(page, rows, specific_row, rows_length, number_of_visual_row);
+            }
+        });
+        // Class를 이용한 여러개 콘텐츠에 동기화하기
+        // $('.sync-pagination')
+    }
+
+    function paging(page, rows, specific_row, number_of_total_row, number_of_visual_row) {
+        $('#main_table > tbody').empty();
+        var startRow = (page - 1) * number_of_visual_row;  // 1 page = 0 * 5 = 0,  2 page = 1 * 5 = 5, 3 page = 2 * 5 = 10 -> start row
+        var endRow = page * number_of_visual_row;  // 1 page = 5, 2 page = 10, 3 page = 15 -> end row
+        if (endRow > number_of_total_row) {  // 5, 10, 15 > total (ex 12) -> 마지막 row 맞추기
+            endRow = number_of_total_row;
+        }
+        main_sales_table(rows, specific_row, startRow, endRow);
     }
 
     $(document).ready(function () {
-    pagination_test();
-    register_of_partner();
-    register_of_order();
-    register_of_pn();
+        pagination_test();
+        register_of_partner();
+        register_of_order();
+        register_of_pn();
     });
 </script>
 {% endblock %}
@@ -46,7 +156,7 @@
 {% block body_title %}Title{% endblock %}
 {% block main_title %}영업 화면{% endblock %}
 {% block body %}
-<input hidden id="main_rows" value="{{ object.manufacture_list() }}"/>
+<input hidden id="main_rows" value="{{ object.sales_list() }}"/>
 <input hidden id="specific_list" value="{{ specific_list }}"/>
 <form class="form-inline" action="/" method="POST">
     <div class="row container-fluid">
@@ -85,7 +195,71 @@
         <ul class="pagination" id="pagination" style="justify-content: center;"></ul>
     </nav>
 </div>
-<!-- The Product Insert Modal -->
+<!-- The P/N Register Modal -->
+<div class="modal fade" id="insert_pn">
+    <div class="modal-dialog modal-lg">
+        <form class="form-inline" action="/registerPN" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header text-white bg-secondary">
+                    <h1 class="page-header">P/N 등록</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered" id="insert_pn_table">
+                            <thead class="thead-light">
+                            <tr>
+                                <th>Project Number</th>
+                                <th>프로젝트 이름</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" id="submit_pn" class="btn btn-warning">등 록
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- The Partner List Modal -->
+<div class="modal fade" id="insert_partner">
+    <div class="modal-dialog modal-xl">
+        <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header text-white bg-secondary">
+                    <h1 class="page-header">협력업체 등록</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered" id="insert_partner_table">
+                            <thead class="thead-light">
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" id="submit_partner" class="btn btn-warning">등 록
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- The Option Order Modal -->
 <div class="modal fade" id="obtain_order">
     <div class="modal-dialog modal-lg">
         <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
@@ -129,81 +303,7 @@
         </form>
     </div>
 </div>
-<!-- The Product Insert Modal -->
-<div class="modal fade" id="insert_pn">
-    <div class="modal-dialog modal-lg">
-        <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
-            <div class="modal-content">
-                <!-- Modal Header -->
-                <div class="modal-header text-white bg-secondary">
-                    <h1 class="page-header">P/N 등록</h1>
-                </div>
-                <!-- Modal Body -->
-                <div class="modal-body">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-bordered" id="insert_pn_table">
-                            <thead class="thead-light">
-                            <tr>
-                                <th>Project Number</th>
-                                <th>프로젝트 이름</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <!-- Modal Footer -->
-                <div class="modal-footer">
-                    <button type="submit" id="submit_pn" class="btn btn-warning">등 록
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<!-- The Product Insert Modal -->
-<div class="modal fade" id="insert_partner">
-    <div class="modal-dialog modal-lg">
-        <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
-            <div class="modal-content">
-                <!-- Modal Header -->
-                <div class="modal-header text-white bg-secondary">
-                    <h1 class="page-header">협력업체 등록</h1>
-                </div>
-                <!-- Modal Body -->
-                <div class="modal-body">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-bordered" id="insert_partner_table">
-                            <thead class="thead-light">
-                            <tr>
-                                <th>구분</th>
-                                <th>업체명</th>
-                                <th>품명</th>
-                                <th>주소</th>
-                                <th>담당자</th>
-                                <th>연락처</th>
-                                <th>E-mail</th>
-                                <th>비고</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <!-- Modal Footer -->
-                <div class="modal-footer">
-                    <button type="submit" id="submit_partner" class="btn btn-warning">등 록
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<!-- The Product Insert Modal -->
+<!-- The Sales Modal -->
 <div class="modal fade" id="insert_modal">
     <div class="modal-dialog modal-lg">
         <form class="form-inline" action="/manufacture_insert" method="POST" enctype=multipart/form-data>
