--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -3,19 +3,22 @@
 <script>
     // As Jquery same the [ window.onload = function(){} ]
     $(document).ready(function () {
-        main_table();
+        pagination_test('production_main', 20);
+        //main_table();
         btn_click_event();
-        state_change_table();
-        detail_tabler();
+        //state_change_table();
         insert_table();
         model_filter();
         location_filter();
         state_filter();
-        main_table_info();
+        //main_table_info();
         //pagination_test();
         //detect_model_filter();
         //detect_location_filter();
         //detect_state_filter();
+        itemChange();
+        add_and_delete_row_btn('production_main');
+
         $('#state_submit_btn').click(function () {
             if ($('#state').val().length == 0) {
                 alert("빈 칸을 입력하세요");
@@ -51,6 +54,73 @@
             var b = $('#eDate').val();
             console.log(b);
         });
+        $('#filter').change(function () {
+            console.log("Filter Value is Changed");
+            itemChange();
+        });
+
+        function itemChange() {
+            var selectItem = $("#filter").val();
+            var table_rows = $('#main_rows').val();
+            table_rows = JSON_parse_convertor(table_rows);
+            if (table_rows == undefined) {
+                console.log('Table length is empty');
+            } else {
+                if (selectItem == "전체") {
+                    $('#sub_filter').empty();
+                    var option = $("<option> </option>");
+                    $('#sub_filter').append(option);
+                } else if (selectItem == "모델") {
+                    var model_list = new Array();
+                    for (var i = 0; i < table_rows.length; i++) {
+                        model_list[i] = table_rows[i]['model'];
+                    }
+                    var model_list_filtering = model_list.filter(function (item, idx, array) {
+                        return array.indexOf(item) === idx;
+                    });
+                    console.log("Model : \n" + model_list_filtering);
+                    $('#sub_filter').empty();
+                    for (var count = 0; count < model_list_filtering.length; count++) {
+                        //var option = $("<option>"+model_list[count]+"</option>");
+                        var model_option = $("<option>").append(model_list_filtering[count]);
+                        $('#sub_filter').append(model_option);
+                    }
+                } else if (selectItem == "위치") {
+                    var location_list = new Array();
+                    for (var i = 0; i < table_rows.length; i++) {
+                        location_list[i] = table_rows[i]['location'];
+                    }
+                    var location_list_filtering = location_list.filter(function (item, idx, array) {
+                        return array.indexOf(item) === idx;
+                    });
+                    console.log("Location : \n" + location_list_filtering);
+                    $('#sub_filter').empty();
+                    for (var count = 0; count < location_list_filtering.length; count++) {
+                        var location_option = $("<option>").append(location_list_filtering[count]);
+                        $('#sub_filter').append(location_option);
+                    }
+                } else if (selectItem == "상태") {
+                    var state_list = new Array();
+                    for (var i = 0; i < table_rows.length; i++) {
+                        state_list[i] = table_rows[i]['state'];
+                    }
+                    var state_list_filtering = state_list.filter(function (item, idx, array) {
+                        return array.indexOf(item) === idx;
+                    });
+                    console.log("State : \n" + state_list_filtering);
+                    $('#sub_filter').empty();
+                    for (var count = 0; count < state_list_filtering.length; count++) {
+                        var state_option = $("<option>").append(state_list_filtering[count]);
+                        $('#sub_filter').append(state_option);
+                    }
+                }
+            }
+            // for (var count = 0; count < changeItem.length; count++) {
+            //     var option = $("<option>" + changeItem[count] + "</option>");
+            //     $('#sub_filter').append(option);
+            // }
+        }
+
     });
 
 </script>
@@ -59,61 +129,69 @@
 {% block body_title %}Title{% endblock %}
 {% block main_title %}재고관리 화면{% endblock %}
 {% block body %}
-<!--<form class="form-inline" action="/search" method="POST">-->
-<form class="form-inline" action="/filtering2" method="POST">
+<!--<form class="form-inline" action="/search" method="POST">
+<form class="form-inline" action="/filtering2" method="POST">-->
+<form class="form-inline" action="/filtering" method="POST">
     <div class="row container-fluid">
         <input type="date" id="startDate" name="startDate" value={{object.date()}} class="btn col-auto1 btn-primary">
         <input type="date" id="endDate" name="endDate" value={{object.date()}}
                class="btn col-auto1 btn-primary date_box">
         <input type="hidden" name="page" value="p_page"/>
         <!--<button type="submit" class="btn col-1 btn-warning">검색</button>-->
+        <!--<button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>-->
+        <select id="filter" name="filter" class="btn btn-secondary col-1" value="">
+            <option selected>전체</option>
+            <option>모델</option>
+            <option>위치</option>
+            <option>상태</option>
+        </select>
+        <select id="sub_filter" name="sub_filter" class="btn btn-secondary col-1" value="">
+            <!-- Dynamic creation -->
+        </select>
         <button type="submit" class="btn btn-secondary col-1">필터 적용</button>
+        <button type="button" id="state_change_btn" class="btn btn-warning col-1" data-toggle="modal"
+                data-target="#shipment_modal">상태 변경
+        </button>
+        <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록
+        </button>
     </div>
     <!--</form>-->
     <hr/>
     <!--<form class="form-inline" action="/filtering2" method="POST">-->
     <input hidden id="sDate" name="sDate" value={{object.date()}}>
     <input hidden id="eDate" name="eDate" value={{object.date()}}>
-    <div class="container-fluid">
-        <div>
-            <!--<button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>-->
-            <button type="button" class="btn btn-secondary col-1" onclick="location.href='/'">전체</button>
-        </div>
-        <div>
-            <select id="model_filter" name="model_filter" class="btn btn-secondary col-1" value="">
-                <option hidden>모델</option>
-            </select>
-        </div>
-        <div>
-            <select id="location_filter" name="location_filter" class="btn btn-secondary col-1" value="">
-                <option hidden>위치</option>
-            </select>
-        </div>
-        <div>
-            <select id="state_filter" name="state_filter" class="btn btn-secondary col-1" value="">
-                <option hidden>상태</option>
-            </select>
-        </div>
-        <div>
-            <!--<a href="/insert_plan" class="btn btn-warning col-1 offset-6"
-               onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>-->
-            <!--<button type="submit" class="btn btn-secondary col-1">필터 적용</button>-->
-            <button type="button" class="btn btn-warning col-1 offset-6" data-toggle="modal"
-                    data-target="#shipment_modal">상태 변경
-            </button>
-            <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록
-            </button>
-        </div>
+    <!--
+    <div>
+        <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
+        <button type="button" class="btn btn-secondary col-1" onclick="location.href='/'">전체</button>
     </div>
+    <div>
+        <select id="model_filter" name="model_filter" class="btn btn-secondary col-1" value="">
+            <option hidden>모델</option>
+        </select>
+    </div>
+    <div>
+        <select id="location_filter" name="location_filter" class="btn btn-secondary col-1" value="">
+            <option hidden>위치</option>
+        </select>
+    </div>
+    <div>
+        <select id="state_filter" name="state_filter" class="btn btn-secondary col-1" value="">
+            <option hidden>상태</option>
+        </select>
+    </div>
+    -->
+    <!--<a href="/insert_plan" class="btn btn-warning col-1 offset-6"
+       onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>-->
+    <!--<button type="submit" class="btn btn-secondary col-1">필터 적용</button>-->
 </form>
 <hr/>
-{% if object.production_main_model()[0] %}
 <input hidden id="info_list" value="{{ object.production_main_info_list() }}"/>
 <input hidden id="model_list" value="{{ object.production_main_model() }}"/>
 <input hidden id="history_list" value="{{ object.production_main_history() }}"/>
-<input hidden id="specific_date_list" value="{{ date_rows }}"/>
-<input hidden id="main_table_list" value="{{ object.main_table_rows() }}"/>
-<table class="table table-striped table-bordered table-sm" id="main_table">
+<input hidden id="specific_list" value="{{ specific_list }}"/>
+<input hidden id="main_rows" value="{{ object.main_table_rows() }}"/>
+<table class="table table-striped table-bordered table-sm text-center" id="main_table">
     <thead class="thead-dark">
     <tr>
         <th>모델명</th>
@@ -128,10 +206,7 @@
     <!--  Call of the Java Script Function (table) -->
     </tbody>
 </table>
-{% else %}
-<h3> No Notice in the Database</h3>
-{% endif %}
-</div>
+<!-- Pageination -->
 <div class="text-center center-block">
     <div id="page_content"></div>
     <nav aria-label="Page navigation">
@@ -155,7 +230,7 @@
                 <!-- Modal Body -->
                 <div class="modal-body">
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered" id="insert_table">
+                        <table class="table table-striped table-bordered text-center" id="insert_table">
                             <thead class="thead-dark">
                             <tr>
                                 <th>모델명</th>
@@ -171,6 +246,8 @@
                 </div>
                 <!-- Modal Footer -->
                 <div class="modal-footer">
+                    <button type="button" id='btn-add-row' class="btn offset-4 btn-secondary">행 추가하기</button>
+                    <button type="button" id='btn-delete-row' class="btn btn-secondary">행 삭제하기</button>
                     <button type="submit" id="insert_submit_btn" class="btn btn-warning">확 인
                     </button>
                 </div>
@@ -190,8 +267,7 @@
                 <!-- Modal Body -->
                 <div class="modal-body">
                     <div class="table-responsive">
-                        {% if object.production_main_model()[0] %}
-                        <table class="table table-striped table-bordered" id="state_table">
+                        <table class="table table-striped table-bordered text-center" id="state_table">
                             <thead class="thead-dark">
                             <tr>
                                 <th>모델명</th>
@@ -204,10 +280,6 @@
                             <!--  Call of the Java Script Function (table) -->
                             </tbody>
                         </table>
-                        {% else %}
-                        <h3> No Notice in the CheckBox</h3>
-                        <input type="hidden" id="state_submit_btn" name="data_empty" value='{{ true }}'/>
-                        {% endif %}
                     </div>
                 </div>
                 <!-- Modal Footer -->
@@ -222,7 +294,6 @@
 <!-- The Detail Console Modal -->
 <div class="modal fade" id="detail_modal">
     <div class="modal-dialog modal-lg">
-
         <div class="modal-content">
             <!-- Modal Header -->
             <div class="modal-header text-white bg-secondary table-responsive">
@@ -239,9 +310,8 @@
             </div>
             <!-- Modal Body -->
             <div class="modal-body">
-                {% if object.production_main_info_list()[0] %}
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered" id="detail_table">
+                    <table class="table table-striped table-bordered text-center" id="detail_table">
                         <thead class="thead-dark">
                         <tr>
                             <th>날짜</th>
@@ -254,10 +324,6 @@
                         <!--  Call of the Java Script Function (table) -->
                         </tbody>
                     </table>
-                    {% else %}
-                    <h3> No Notice in the CheckBox</h3>
-                    <input type="hidden" name="data_empty" value='{{ true }}'/>
-                    {% endif %}
                 </div>
             </div>
             <!-- Modal Footer -->
