19-02-25 Added Graph ( open source graph plugin )

--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -191,7 +191,7 @@
 <input hidden id="history_list" value="{{ object.production_main_history() }}"/>
 <input hidden id="specific_list" value="{{ specific_list }}"/>
 <input hidden id="main_rows" value="{{ object.main_table_rows() }}"/>
-<table class="table table-striped table-bordered table-sm text-center" id="main_table">
+<table class="table table-striped table-bordered table-sm text-center tablesorter" id="main_table">
     <thead class="thead-dark">
     <tr>
         <th>모델명</th>
