--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -13,6 +13,9 @@
     <script src="../static/lib/js_function/js_function.js" type="text/javascript"></script>
     <script src="../static/js/lib/jquery.twbsPagination.js"></script>
     <script src="../static/js/lib/jquery.twbsPagination.min.js"></script>
+    <script src="../static/lib/tablesorter-2.31.1/js/jquery.tablesorter.js"></script>
+    <script src="../static/lib/tablesorter-2.31.1/js/jquery.tablesorter.widgets.js"></script>
+    <link rel="stylesheet" href="../static/lib/tablesorter-2.31.1/css/theme.blue.css">
 
     {% block head %}
     {% endblock %}
