--- a/FlaskServer/templates/statistics_main.html
+++ b/FlaskServer/templates/statistics_main.html
@@ -1,7 +1,34 @@
 {% extends 'main_base.html' %}
 {% block head %}
+<link rel="stylesheet" href="../static/js/lib/billboard.css">
+<script src="../static/js/lib/billboard.pkgd.js"></script>
 <script>
+    function billboard_test() {
+        var data = new Array();
+        var data1 = ["data1", 30, 200, 100, 400, 150, 250];
+        var data2 = ["data2", 70, 120, 350, 200, 150, 350];
+        console.log(data1);
+        console.log(data2);
+        data.push(data1);
+        data.push(data2);
+        console.log(data);
+
+        var barChart = bb.generate({
+            bindto: "#barChart",
+            data: {
+                type: "bar",
+                columns: data,
+                axes: {
+                    data1: "y"
+                }
+            }
+        });
+        //chard.load();
+
+    }
+
     $(document).ready(function () {
+        billboard_test();
     });
 </script>
 {% endblock %}
@@ -9,5 +36,5 @@
 {% block body_title %}Title{% endblock %}
 {% block main_title %}통계 화면{% endblock %}
 {% block body %}
-
+<div id="barChart"></div>
 {% endblock %}
