19-02-26 Added Graph function

--- a/FlaskServer/templates/statistics_main.html
+++ b/FlaskServer/templates/statistics_main.html
@@ -5,6 +5,69 @@
 <script>
     function billboard_test() {
         var data = new Array();
+
+        $.ajax({
+            url: "/getBarGraph",
+            data: {
+                //'product_info_id': received_id
+            },
+            type: "GET",
+            dataType: "json"
+        })
+            .done(function (json) {
+                console.log("Detail Table Ajax is DONE");
+                console.log(json);
+
+                var model = new Array();
+                var model_number = new Array();
+                for (var i = 0; i < json[0].length; i++) {
+                    //eval("var data" + i + ';');
+                    model[i] = json[0][i];
+                }
+                for (var a = 0; a < json[1].length; a++) {
+                    model_number[a] = json[1][a];
+                }
+                console.log(model);
+                console.log(model_number);
+                var number_of_week_per_model = new Array();
+                var number_of_week_per_model_list = new Array();
+                for (var j = 0; j < model.length; j++) {
+                    for (var k = 0; k < model_number.length; k++) {
+                        number_of_week_per_model.push(model_number[k][model[j]]);
+                    }
+                    number_of_week_per_model_list.push(number_of_week_per_model);
+                    number_of_week_per_model = [];
+                }
+                console.log(number_of_week_per_model_list);
+                var merge_list = new Array();
+                var result = new Array();
+                for (var b = 0; b < model.length; b++) {
+                    var graph_data = merge_list.concat(model[b], number_of_week_per_model_list[b]);
+                    result.push(graph_data);
+                }
+                console.log(result);
+
+                var barChart = bb.generate({
+                    bindto: "#barChart",
+                    data: {
+                        type: "bar",
+                        columns: result,
+                        axes: {
+                            data1: "y"
+                        }
+                    }
+                });
+            })
+            .fail(function (xhr, status, errorThrown) {
+                $("#barChart").html("오류발생<br>")
+                    .append("오류명 : " + errorThrown + "<br>")
+                    .append("상태 : " + status);
+            })
+            .always(function (xhr, status) {
+                //$("#barChart").html("요청 완료");
+            });
+
+
         var data1 = ["data1", 30, 200, 100, 400, 150, 250];
         var data2 = ["data2", 70, 120, 350, 200, 150, 350];
         console.log(data1);
@@ -13,16 +76,7 @@
         data.push(data2);
         console.log(data);
 
-        var barChart = bb.generate({
-            bindto: "#barChart",
-            data: {
-                type: "bar",
-                columns: data,
-                axes: {
-                    data1: "y"
-                }
-            }
-        });
+
         //chard.load();
 
     }
