--- a/FlaskServer/templates/sales_main.html
+++ b/FlaskServer/templates/sales_main.html
@@ -114,13 +114,19 @@
             P/N 등록
         </button>
         <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_partner">
-            협력업체
+            협력업체 등록
         </button>
         <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#obtain_order">
             수주
         </button>
         <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal">
             납품
+        </button>
+        <button type="button" class="btn btn-success col-1 offset-3" data-toggle="modal" data-target="#">
+            ????
+        </button>
+        <button type="button" class="btn btn-success col-1" data-toggle="modal" data-target="#">
+            협력업체 리스트
         </button>
     </div>
 </form>
